--- a/src/Vista/frmVentaPorSucursal.form
+++ b/src/Vista/frmVentaPorSucursal.form
@@ -77,10 +77,10 @@
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
-                  <Component id="jScrollPane1" pref="510" max="32767" attributes="0"/>
+                  <Component id="jScrollPane1" max="32767" attributes="0"/>
                   <Group type="102" alignment="1" attributes="0">
-                      <Component id="jtlSucursales" min="-2" pref="280" max="-2" attributes="0"/>
-                      <EmptySpace max="32767" attributes="0"/>
+                      <Component id="jtlSucursales" min="-2" pref="250" max="-2" attributes="0"/>
+                      <EmptySpace pref="50" max="32767" attributes="0"/>
                       <Component id="btnMostrarTodo" min="-2" pref="200" max="-2" attributes="0"/>
                   </Group>
               </Group>
